{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 46,
  "lineage": "02272559-e30e-7860-8bf4-4b7a65068541",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785818314211:internet-gateway/igw-04dd536e4266d4b74",
            "id": "igw-04dd536e4266d4b74",
            "owner_id": "785818314211",
            "region": "us-east-1",
            "tags": {
              "Name": "invoices-igw"
            },
            "tags_all": {
              "Name": "invoices-igw"
            },
            "vpc_id": "vpc-06ca5c119b7fa337c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_inet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04dd536e4266d4b74",
            "id": "r-rtb-0439c523d09d2af281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0439c523d09d2af28",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "785818314211",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0439c523d09d2af28"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785818314211:route-table/rtb-0439c523d09d2af28",
            "id": "rtb-0439c523d09d2af28",
            "owner_id": "785818314211",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "invoices-rt-public"
            },
            "tags_all": {
              "Name": "invoices-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ca5c119b7fa337c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "785818314211",
            "id": "rtb-0439c523d09d2af28",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf135fb37a9e23d0",
            "region": "us-east-1",
            "route_table_id": "rtb-0439c523d09d2af28",
            "subnet_id": "subnet-0da7275869cc44a31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_az1",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ef67cd743d85723",
            "region": "us-east-1",
            "route_table_id": "rtb-0439c523d09d2af28",
            "subnet_id": "subnet-0b3dcce9556f7a1e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_az2",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785818314211:security-group/sg-03e80b44791d41ba6",
            "description": "Client SG placeholder (egress all)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e80b44791d41ba6",
            "ingress": [],
            "name": "invoices-client-sg",
            "name_prefix": "",
            "owner_id": "785818314211",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "invoices-client-sg"
            },
            "tags_all": {
              "Name": "invoices-client-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ca5c119b7fa337c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "785818314211",
            "id": "sg-03e80b44791d41ba6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785818314211:subnet/subnet-0da7275869cc44a31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da7275869cc44a31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "785818314211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "invoices-public-az1"
            },
            "tags_all": {
              "Name": "invoices-public-az1"
            },
            "vpc_id": "vpc-06ca5c119b7fa337c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "785818314211",
            "id": "subnet-0da7275869cc44a31",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785818314211:subnet/subnet-0b3dcce9556f7a1e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3dcce9556f7a1e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "785818314211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "invoices-public-az2"
            },
            "tags_all": {
              "Name": "invoices-public-az2"
            },
            "vpc_id": "vpc-06ca5c119b7fa337c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "785818314211",
            "id": "subnet-0b3dcce9556f7a1e8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785818314211:vpc/vpc-06ca5c119b7fa337c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fab28f57cb343f83",
            "default_route_table_id": "rtb-0185dc4865a95b0ee",
            "default_security_group_id": "sg-06d1ca1eda3ee0b1e",
            "dhcp_options_id": "dopt-0a7c49821f0435ee8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ca5c119b7fa337c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0185dc4865a95b0ee",
            "owner_id": "785818314211",
            "region": "us-east-1",
            "tags": {
              "Name": "invoices-vpc"
            },
            "tags_all": {
              "Name": "invoices-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785818314211:security-group/sg-0f34aa43e40e419f9",
            "description": "MySQL inbound from allowed CIDR",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f34aa43e40e419f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "181.58.39.27/32"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "invoices-db-sg",
            "name_prefix": "",
            "owner_id": "785818314211",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "invoices-db-sg"
            },
            "tags_all": {
              "Name": "invoices-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ca5c119b7fa337c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "785818314211",
            "id": "sg-0f34aa43e40e419f9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}